# SimuladorNumerico

cfd_server/: CMakeLists.txt  cfd_server.py  environment.devenv.yml  environment.yml  simulator.py
cfd_server/libCFDFlow/: CFDFlow.py.cpp  CMakeLists.txt  Mesh.cpp  Mesh.hpp  Mesh.py.cpp  Solver.cpp  Solver.hpp  Solver.py.cpp
cfd_server/test/: test_libCFDFlow_mesh.py  test_libCFDFlow_solver.py
geochemical_server/: environment.devenv.yml  environment.yml  geochemical_server.py  simulator.py
geochemical_server/test/: test_simulador_calculo_temperatura.py
simulation_app/: app.py  environment.devenv.yml  environment.yml
simulation_app/static/: index.js
simulation_app/templates/: base.html  geochemical_simulator.html  home.html  temperature_simulator.html
